--- a/html-css-boolando/css/style.css
+++ b/html-css-boolando/css/style.css
@@ -9,6 +9,118 @@ body {
     font-family: Arial, sans-serif;
 }
 
+/* HEADER */
 
+header {
+    height: 60px;
+    background-color: #ff6900;
+    padding: 15px 0x;
+    color: white;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
 
+li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 5px;
+}
 
+li > button {
+    background-color: #ff6900;
+    border-style: none;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+}
+
+#blogo {
+    height: 30px;
+    display: inline-block;
+}
+
+/* MAIN */
+
+main {
+    padding-top: 100px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-33 {
+    width: calc(100 / 3);
+}
+
+.content {
+    border: 1px solid black;
+    margin: 10px;
+}
+
+.content img {
+    width: 100%;
+    height: 500px;
+}
+
+.card-text p {
+    font-size: 18px;
+    text-transform: uppercase;
+}
+
+.card-image {
+    position: relative;
+}
+
+.labels {
+    position: absolute;
+    bottom: 20px;
+    left: 0px;
+    display: flex;
+}
+
+.label {
+    font-size: 16px;
+    font-weight: 700;
+    padding: 5px;
+    margin-right: 5px;
+    color: white;
+    display: inline-block;
+}
+
+.green-label {
+    background-color: green;
+}
+
+.red-label {
+    background-color: red;
+}
+
+.heart {
+    background-color: white;
+    padding: 5px 10px;
+    position: absolute;
+    top: 20px;
+    right: 0px;
+}
+
+.new-price {
+    color: red;
+    font-weight: bold;
+}
+
+.old-price {
+    font-style:
+}
